syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.muazwzxv.models";

import "google/protobuf/wrappers.proto";

// Request type
message BalanceCheckRequest {
  google.protobuf.Int32Value account_number = 1;
}

// Response type
message Balance {
  google.protobuf.Int32Value amount = 1;
}

// Define the service
service BankService {
  rpc getBalance(BalanceCheckRequest) returns (Balance);
}